syntax = "proto3";
package io.sandbox.grpc;

message CreateNewSandboxRequest {
    string token = 1;
}

message CreateNewSandboxResponse {
    string sandbox_id = 1;
}

message PostOrderBuyMarketRequest {
    int64 chatId = 1;
    string ticker = 2;
    string quantity = 3;
}

message PostOrderBuyMarketResponse {
    double executed_order_price = 1;
}

//message PortfolioRequest {
//    string sandbox_token = 1;
//    string sandbox_id = 2;
//}
//
//message PortfolioResponse {
//
//}
//
//message OperationsRequest {
//    string sandbox_token = 1;
//    string sandbox_id = 2;
//}
//
//message OperationsResponse {
//
//}
//
message GetInstrumentRequest {
    int64 chatId = 1;
    string ticker = 2;
}

message GetInstrumentResponse {
    string shareName = 1;
}


service CommandService{
    rpc CreateNewSandbox (CreateNewSandboxRequest) returns (CreateNewSandboxResponse);
    rpc PostOrderBuyMarket (PostOrderBuyMarketRequest) returns (PostOrderBuyMarketResponse);
    rpc GetInstrument (GetInstrumentRequest) returns (GetInstrumentResponse);
}